gtksourceview/gtksourcegutter.c
@@ -123,6 +123,13 @@ static void on_view_style_updated (GtkSourceView    *view,
 static void do_redraw (GtkSourceGutter *gutter);
 static void update_gutter_size (GtkSourceGutter *gutter);
 
+static GdkWindow *
+get_window (GtkSourceGutter *gutter)
+{
+	return gtk_text_view_get_window (GTK_TEXT_VIEW (gutter->priv->view),
+	                                 gutter->priv->window_type);
+}
+
 static void
 on_renderer_size_changed (GtkSourceGutterRenderer *renderer,
                           GParamSpec              *spec,
@@ -388,15 +395,48 @@ calculate_gutter_size (GtkSourceGutter  *gutter,
 }
 
 static void
+window_invalidate_handler (GdkWindow      *window,
+			   cairo_region_t *region)
+{
+	cairo_rectangle_int_t rect;
+
+	/* Always invalidate the whole window.
+	 * When the text is modified in a GtkTextBuffer, GtkTextView tries to
+	 * redraw the smallest required region. But the information displayed in
+	 * the gutter may become invalid in a bigger region.
+	 * See https://bugzilla.gnome.org/show_bug.cgi?id=732418 for an example
+	 * where line numbers are not updated correctly when splitting a wrapped
+	 * line.
+	 * The performances should not be a big problem here. Correctness is
+	 * more important than performances.
+	 */
+
+	rect.x = 0;
+	rect.y = 0;
+	rect.width = gdk_window_get_width (window);
+	rect.height = gdk_window_get_height (window);
+
+	cairo_region_union_rectangle (region, &rect);
+}
+
+static void
 update_gutter_size (GtkSourceGutter *gutter)
 {
 	gint width;
+	GdkWindow *window;
 
 	width = calculate_gutter_size (gutter, NULL);
 
 	gtk_text_view_set_border_window_size (GTK_TEXT_VIEW (gutter->priv->view),
 	                                      gutter->priv->window_type,
 	                                      width);
+
+	window = get_window (gutter);
+
+	if (window != NULL)
+	{
+		gdk_window_set_invalidate_handler (window, window_invalidate_handler);
+	}
 }
 
 static gboolean
@@ -611,13 +651,6 @@ gtk_source_gutter_new (GtkSourceView     *view,
 	                     "view", view,
 	                     "window_type", type,
 	                     NULL);
-}
-
-static GdkWindow *
-get_window (GtkSourceGutter *gutter)
-{
-	return gtk_text_view_get_window (GTK_TEXT_VIEW (gutter->priv->view),
-	                                 gutter->priv->window_type);
 }
 
 /* Public API */
